--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -86,7 +86,7 @@
                     </li>
                     <li class="nav-item p-2">
                         <a class="d-flex py-2 mx-2 border border-primary bg-white rounded-pill" data-bs-toggle="pill" href="#tab-11">
-                            <span class="text-dark small" style="width: 140px;">Sit objectives</span>
+                            <span class="text-dark small" style="width: 140px;">Our App objectives</span>
                         </a>
                     </li>
                 </ul>
