--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -186,7 +186,7 @@
                                 <a href="{% url 'pages:about-us' %}"> <i class="fas fa-share text-primary me-2"></i>Leadership</a>
                             </div>
                             <div class="col-sm-6">
-                                <a href="{% url 'pages:about-us' %}"><i class="fas fa-share text-primary me-2"></i>Sit objectives</a>
+                                <a href="{% url 'pages:about-us' %}"><i class="fas fa-share text-primary me-2"></i>Web App Mission</a>
                             </div>
                         </div>
                         {% comment %} <a href="{% url 'pages:about-us' %}" class="btn btn-sm btn-primary py-3 px-5 rounded-pill">About Us<i class="fas fa-arrow-right ps-2"></i></a> {% endcomment %}
