--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -186,7 +186,7 @@
                                 <a href="{% url 'pages:about-us' %}"> <i class="fas fa-share text-primary me-2"></i>Leadership</a>
                             </div>
                             <div class="col-sm-6">
-                                <a href="{% url 'pages:about-us' %}"><i class="fas fa-share text-primary me-2"></i>Sit objectives</a>
+                                <a href="{% url 'pages:about-us' %}"><i class="fas fa-share text-primary me-2"></i>Web App Mission</a>
                             </div>
                         </div>
                         {% comment %} <a href="{% url 'pages:about-us' %}" class="btn btn-sm btn-primary py-3 px-5 rounded-pill">About Us<i class="fas fa-arrow-right ps-2"></i></a> {% endcomment %}
@@ -298,7 +298,7 @@
                                     <h5 class="mb-3">ፍተዓት አገልግሎት Funeral service</h5>
                                     <p class="mb-4 small">የቀብር  ፍተዓት ፅሎተ   አገልግሎት "ጽድቅን አድርግ፥ ምሕረትን ውደድ፥ ከአምላክህ ጋር በትሕትና ተመላለስ።" ሚክያስ 6:8</p>
                                     {% if user.is_authenticated %}
-                                    <a href="{% url "services:funeralServices" %}" class="btn btn-primary px-4 py-2 rounded-pill">Start</a>
+                                    <a href="{% url "services:createFuneralServices" %}" class="btn btn-primary px-4 py-2 rounded-pill">Start</a>
                                     {% else %}
                                     <a href="{% url 'account_login'%}" class="btn btn-primary py-2 px-3 me-3 rounded-pill small">start</a>
                                     {% endif %}
