--- a/templates/payments/checkout.html
+++ b/templates/payments/checkout.html
@@ -29,7 +29,7 @@
     </div>
 </div>
 <div class="container mt-5">
-    <div class="row g-5">
+    <div class="row g-5 justify-content-center">
       <!--members Information,Billing address,Payment -->
       <div class="col-md-6 col-lg-7">
         <h3 class="mb-3">members Information</h3>
@@ -223,7 +223,6 @@
     } else {
         console.error("Checkout button not found.");
     }
-});
-
+  });
 </script>
 {% endblock %}
