--- a/templates/services/sermon_media_detail.html
+++ b/templates/services/sermon_media_detail.html
@@ -41,6 +41,12 @@
                     <p class="card-text">Series: {{ sermon_media.sermon.series }}</p>
                     <!-- Add other fields as needed -->
                 </div>
+                <div class="card-body">
+                    <p class="card-text">Description:</p>
+                    <hr>
+                    <small class="card-text small">{{ sermon_media.sermon.description }}</small>
+                    <!-- Add other fields as needed -->
+                </div>
             </div>
             
         </div>
