--- a/templates/schools/childrenSchool.html
+++ b/templates/schools/childrenSchool.html
@@ -68,14 +68,14 @@
                                                                 alt="Church-at" data-wow-delay="0.0s">
                                                                 
                                                                 <div class="text-center">
-                                                                    <h3 class="mb-3 bolder text-secondary">{{ course.title }}</h3>
+                                                                    <h3 class="mb-3 bolder text-dark">{{ course.title }}</h3>
                                                                 </div>
                                                             </div>
                                                         {% else %}
                                                             <div class="justify-content-center align-items-center" style="height: 200px; background-color:hsl(216, 33.30%, 97.10%); border-radius: 5px;">
                                                                 <i class="fas fa-cross text-primary py-5" style="font-size: 3rem;"></i>
                                                                 <div class="text-center">
-                                                                    <p class="mb-3 bolder text-secondary h3">{{ course.title }}</p>
+                                                                    <p class="mb-3 bolder text-dark h3">{{ course.title }}</p>
                                                                 </div>
                                                             </div>
                                                         {% endif %}
@@ -432,7 +432,7 @@
                                                                                     <div class="d-flex">
                                                                                         <div class="flex-shrink-0"><img class="rounded-circle" src="{% static "img/icon/Ansewr.png "%}" alt="ansewr"></div>
                                                                                         <div class="ms-3">
-                                                                                            <div class="fw-bold">Youth School</div>
+                                                                                            <div class="fw-bold">Children School</div>
                                                                                             <hr>
                                                                                             {% if quationsAndAnswer.answer %}
                                                                                             <span >{{quationsAndAnswer.answer}}?</span>
